--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+def keysPropertiesFile = rootProject.file("keys.properties")
+def keysProperties = new Properties()
+keysProperties.load(new FileInputStream(keysPropertiesFile))
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -14,6 +18,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.2"
+        buildConfigField("String", "FLURRY_KEY", keysProperties['flurry_key'])
     }
 
     buildFeatures {
@@ -47,14 +52,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
     implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
     implementation 'com.flurry.android:analytics:12.11.0@aar'
-
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
@@ -72,5 +75,4 @@ dependencies {
     implementation 'com.github.BeppiMenozzi:TriStateToggleButton:1.1.4'
     implementation group: 'com.google.guava', name: 'guava', version: '24.1-jre'
     implementation 'com.google.code.gson:gson:2.8.6'
-
 }
