--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name=".Gray"
         android:allowBackup="false"
-        android:icon="@mipmap/app_icon"
+        android:icon="@mipmap/app_icon_new"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_traffic_config"
         android:supportsRtl="true"
