--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 DEV_URL="https://apigray.mobiblanc.com/"
+#DEV_URL="https://rctapigray.mobiblanc.com/"
