--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,5 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation group: 'com.google.guava', name: 'guava', version: '24.1-jre'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
 }
