Switching from prod to dev using shake listener

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ android {
             dimension "app"
             buildConfigField "String", "BASEURL", DEV_URL
         }
+        preprod {
+            dimension "app"
+            buildConfigField "String", "BASEURL", PREPROD_URL
+        }
     }
 
     compileOptions {
