--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,6 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-DEV_URL="https://apigray.mobiblanc.com/"
+DEV_URL="https://apigray.mobiblanc.com/api/"
+PREPROD_URL="http://10.100.233.216:443/api_mobile/"
 #DEV_URL="https://rctapigray.mobiblanc.com/"
