--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,6 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 DEV_URL="https://apigray.mobiblanc.com/api/"
-#DEV_URL="https://rctapigray.mobiblanc.com/api/"
+# DEV_URL="https://rctgray.mobiblanc.com/api/"
 PREPROD_URL="http://10.100.233.216:443/api_mobile/"
 #DEV_URL="https://rctapigray.mobiblanc.com/"
