--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+apply plugin: 'com.google.gms.google-services'
+
+
 def keysPropertiesFile = rootProject.file("keys.properties")
 def keysProperties = new Properties()
 keysProperties.load(new FileInputStream(keysPropertiesFile))
@@ -62,7 +65,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
     implementation 'com.flurry.android:analytics:12.11.0@aar'
-    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    //implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    implementation platform('com.google.firebase:firebase-bom:29.0.1')
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-core'
