--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera.any" />
 
     <uses-feature
         android:name="android.hardware.sensor.accelerometer"
@@ -21,6 +24,9 @@
         tools:ignore="LockedOrientationActivity"
         tools:replace="android:allowBackup"
         tools:targetApi="n">
+        <activity
+            android:name=".views.dashboard.BarCodeReader.BarCodeActivity"
+            android:exported="false" />
         <activity
             android:name=".views.dashboard.contract.ContractActivity"
             android:windowSoftInputMode="adjustResize" />
