--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,7 @@ android.enableJetifier=true
 DEV_URL="https://apigray.mobiblanc.com/api/"
 # DEV_URL="https://rctgray.mobiblanc.com/api/"
 PREPROD_URL="http://10.100.233.216:443/api_mobile/"
+
+DISCOVER_PROD="http://10.100.233.216:443/"
+DISCOVER_DEV="https://rctgray.mobiblanc.com/"
 #DEV_URL="https://rctapigray.mobiblanc.com/"
